Style fix on iphone for classes/reservations/equipment

--- a/html/static/css/classes.css
+++ b/html/static/css/classes.css
@@ -385,8 +385,8 @@ form {
 
 .navchev {
     border-radius: 50%;
-    width: 2.5em;
-    height: 2.5em;
+    width: 2em;
+    height: 2em;
     padding-right: .05em;
     border: 1px solid #fff;
     margin: 0.25em 0 0;
@@ -395,8 +395,8 @@ form {
 
 .navfabar {
     border-radius: 50%;
-    width: 2.5em;
-    height: 2.5em;
+    width: 2em;
+    height: 2em;
     border: 1px solid #fff;
     margin: 0.25em 0 0;
     box-shadow: none;
@@ -540,8 +540,8 @@ form {
     .navbar-reserve,
     .navbar-date {
         text-transform: uppercase;
-        font-size: 0.7em;
-        line-height: 5em;
+        font-size: 0.6em;
+        line-height: 6em;
     }
 
     .upace-date {
